--- a/DekContext/DekContext.csproj
+++ b/DekContext/DekContext.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataLoadSave.cs" />
     <Compile Include="Dek.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GroupeTable.cs" />
